# sanic-aioja

./: .travis.yml  README.md  setup.cfg
example/: .gitignore  app.py  extensions.py
example/templates/: base.html  index.html
example/translations/ru/LC_MESSAGES/: messages.po
